<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">巴别塔</string>
    <string name="babeltower_version_name">v1.0.0</string>
    <string name="webview_bottombar_pageview">Pageview </string>
    <string name="webview_bottombar_like">Like </string>
    <string name="webview_bottombar_initial_count">0</string>
    <string name="header_name">Babel Tower</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_home">首页</string>
    <string name="menu_login">登陆账号</string>
    <string name="menu_management">主题日报</string>
    <string name="menu_collect">我的收藏</string>
    <string name="menu_message">消息</string>
    <string name="main_news_text">新闻列表</string>
    <string name="post_list_view_image">postListViewImage</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_special">SpecialActivity</string>
    <string name="about_babieta_license">Open Source Licenses</string>
    <string name="about_babieta_copyright">©2015 100steps Innovation Center</string>
    <string name="about_babieta_rights_reserved">All rights reserved.</string>
    <string name="menu_babieta_bbtnews">今日内容</string>
    <string name="menu_babieta_campusnews">分类浏览</string>
    <string name="menu_babieta_mycollection">我的收藏</string>
    <string name="menu_babieta_settings">设置</string>
    <string name="feedback_submit">提交</string>
    <string name="waiting_tips">稍等片刻(*/ω＼*)</string>
    <string name="feedback_babieta_content_hint">有什么想告诉我们的?</string>
    <string name="feedback_babieta_contact_hint">联系方式(可选)</string>
    <string name="slidingmenu_bottomtext">巴别塔
\n百步梯学生创新中心
\n诚意出品
</string>
	<string name="version_history">
  v1.0.0 (2015-5-2) : 新版UI设计
\n v0.5 Beta (2015-4-30) : 适配xxhdpi和xhdpi两种分辨率
\n v0.4 Alpha (2015-4-18) : 基本功能开发完成
\n----------------------------------
\n Developer
\n----------------------------------
\n Zhang Junda
\n Zhang Zongke
\n Xian Qiming
	</string>
    <string name="open_source_licenses">*Babel for Android
\n
\n*Developed by BBT R&amp;D center
\n
\n*This software uses the following open source projects from GitHub, 
we sincerely appreciate all their help and we obey their Open Source Licenses. 
\n----------------------------------
\n Referenced Libraries
\n----------------------------------
\n* Universal Image Loader 
\nCopyright 2011-2015 Sergey Tarasevich
\n
\nLicensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
\n
\nhttp://www.apache.org/licenses/LICENSE-2.0
\n 
\nUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
\n
\n
\n----------------------------------
\n* Pull To Refresh Views for Android
\nCopyright 2011-2012 Chris Banes.
\n
\nLicensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
\n
\nhttp://www.apache.org/licenses/LICENSE-2.0
\n 
\nUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
\n
\n
\n----------------------------------
\n* PhotoView
\nCopyright 2011-2012 Chris Banes.
\n
\nLicensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
\n
\nhttp://www.apache.org/licenses/LICENSE-2.0
\n 
\nUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
\n
\n
\n----------------------------------
\n* SlidingMenu
\nCopyright 2012-2014 Jeremy Feinstein
\n
\nLicensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
\n
\nhttp://www.apache.org/licenses/LICENSE-2.0
\n 
\nUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
\n
\n
\n----------------------------------
\n* Netroid library for Android
\nCopyright 2013 Vince Styling
\n
\nLicensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
\n
\nhttp://www.apache.org/licenses/LICENSE-2.0
\n 
\nUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
\n
\n
\n----------------------------------
\n* Android System Bar Tint
\nCopyright 2013 readyState Software Limited
\n
\nLicensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
\n
\nhttp://www.apache.org/licenses/LICENSE-2.0
\n 
\nUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
\n
\n
\n----------------------------------
\n* RippleEffect
\nCopyright © 2014 Robin Chutaux
\n
\nLicensed under the MIT License (MIT)
\nPermission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:
\n
\nThe above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.
\n
\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.

</string>

</resources>