<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true" >

    <include
        android:id="@+id/text_include"
        layout="@layout/head_with_back" />

    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="90.0dip"
        android:layout_height="90.0dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/babeltower_about_logo" />

    <TextView
        android:id="@+id/about_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="#575757"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_appname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/babeltower_version_name"
        android:textColor="#575757"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/about_license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/about_copyright"
        android:layout_centerHorizontal="true"
        android:text="@string/about_babieta_license"
        android:textColor="#006ab4"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/about_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/about_rights_reserved"
        android:layout_centerHorizontal="true"
        android:text="@string/about_babieta_copyright"
        android:textColor="#1C1C1C"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/about_rights_reserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/about_babieta_rights_reserved"
        android:textColor="#1C1C1C"
        android:textSize="14sp" />

</RelativeLayout>